branches/V7.1/projeqtor/docs/user/index.rst
.. ProjeQtOr user guide documentation master file, created by
   sphinx-quickstart on Fri May 29 11:17:53 2015.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.


Welcome
=======

ProjeQtOr is a Quality based Project Organizer, as a web application.

ProjeQtOr focuses on IT Projects, but is also compatible with all kinds of Projects.

Its purpose is to propose a unique tool to gather all the information about the projects. 

The fact is that many Project Management softwares just focus on planning. 
But it is a much too restrictive point of view. 
Of course, planning is an important activity of Project Management and is one of the keys to Project success, 
but it is not the only one.

Project Managers need to foresee all what can happen, measure risks, build an action plan and mitigation plan.

It is also important to track and keep traces of all what is happening to the Project : 
incidents, bugs , change requests, support requests, ...

In this objective, ProjeQtOr gives visibility at all levels of Project Management.

At lower level, the Project follow-up consists in gathering all information, and maintain it up to date. 
This involves all the operational teams.

At upper level, Project Steering uses the follow-up data to take the decisions and build the action plan. 
This allows to bring the adjustments needed to target on the objectives of the project. 

The goal of ProjeQtOr is to be Project Management Method independent. 
Whatever your choice of the method, you can use ProjeQtOr.


.. raw:: latex

    \newpage

What's New in this user guide version?
======================================


This section summarizes significant changes made in the user guide document for this version.

To see complete list of changes made to software, visit the ProjeQtOr web site.

Current version is V7.1 



.. rubric:: Planning

-	Managements of pool of resource

A pool is a resource that contains several resources and can therefore be allocated to projects and assigned to activities.
The pool has a capacity deducted from the resources that are assigned to it.
It is planned taking into account the individual assignment of each resource.
Conversely, each resource is assigned taking into account its participation in resource pools.
A resource assigned to a pool can automatically enter real work on activities assigned to the pool.

-	Filter on the planning

Possibility to filter the activities to be displayed on the Gantt Planning view. The "parents" of the selected activities are also displayed to maintain the WBS structure.

.. rubric:: Steering

Add dates on incomings, deliverables and deliveries to follow dates : initial, planned, real, validation

.. rubric:: Requirements and tests

Add new Requirements dashboard, similar to existing Ticket Dashboard

.. rubric:: Configuration management (Products et Versions)
     
Possibility to define component types and component versions that will only be used for definition of structure (not for Version Planning or Tickets)

.. rubric:: Controls et Automation
    
On workflows, view the list of types that use this workflow

Define a project to be assigned by default to new users coming from LDAP

.. rubric:: Miscellaneous

Management of multiple customers.

Define the default copy class.


.. rubric:: Reports
     
New report "Customer impacted by tickets" for a given product or a given product version

.. rubric:: Technical

Display external libraries (and their version) on the pop-up "About"

.. rubric:: Prévious version was V7.0

  
.. rubric:: Activity Stream.

* Activity Stream
    
 * Display of notes on right part of screen.
    
 * Possibility to quickly add note, in chat like mode.
    
 * See: :ref:`AS`

.. rubric:: Configuration Management.

* Versions planning

  * New screen "version planning" to display versions in a Gantt chart according to their delivery dates.

  * See: :ref:`versions-planning`

.. rubric:: Review logs.

* Deliverys

  * Added list of deliverables integrated in delivery.
  
  * Automatic dispatch of delivery status to deliverables.

  * See: :ref:`deliveries`


.. rubric:: List of values.

* Consolidation of status changes.

  * See: :ref:`status`

.. raw:: latex

    \newpage


.. rubric:: Notification system.

* To generate notifications manually or according to some very "powerful" rules (defined as "where" clauses)
  * See: :ref:`ControlAutomation`


.. raw:: latex

    \newpage

Features
========

ProjeQtOr  is a "Quality based Project Organizer".

It is particularly well suited to IT projects, but can manage any type of project.

It offers all the features needed to different Project Management actors under a unique collaborative interface.
  
.. toctree::
   :maxdepth: 1
   
   Features

Concepts
========

This chapter defines the concepts of ProjeQtOr.

They can be referred in the following chapters.

.. toctree::
   :maxdepth: 1

   Concept


Graphical user interface
========================

ProjeQtOr provides a very rich user interface.

It may be frightening at first glance because of the very numerous elements it provides, 
but once you'll get familiar to the structure of the interface you'll discover that it is quite simple 
as all screens have the same frames and sections always have simular structure and position.

.. toctree::
   :titlesonly:

   Gui
   CommonSections
   UserParameter



Planning and Follow-up
======================

ProjeQtOr provides all the elements needed to build a planning from workload, 
constraints between tasks and resources availability.

The main activity of Project Leader is to measure progress, analyse situation and take decisions.
In order to ease his work, ProjeQtOr provides several reporting tools, from the well know Gantt chart, to many reports.

.. toctree::
   :maxdepth: 1

   PlanningElements 
   Gantt
   Today 
   Diary
   Report


Real work allocation
====================

As ProjeQtOr implements Effort Driven planning (work drives planning calcuation), 
one of the key to manage project progress is to enter the real work 
and re-estimate left work for all ongoing tasks.

ProjeQtOr provides a dedicate screen for this feature, to ease this input so that entering real work is as quick as possible.
 
.. toctree::
   :titlesonly:

   RealWorkAllocation

Document management
===================

ProjeQtOr integrates an easy to use Document Management feature.

.. toctree::
   :maxdepth: 1

   Document

Ticket management
=================

.. toctree::
   :maxdepth: 1

   Ticket
   TicketDashBoard

  
Requirements & Tests
====================

.. toctree::
   :maxdepth: 1

   RequirementsTest
   RequirementsDashBoard

Financial
=========

.. toctree::
   :maxdepth: 1

   Expense
   Order   
   Bill
   FinancialGallery
   
Configuration Management
========================

.. toctree::
   :maxdepth: 1

   ConfigurationManagement

Risk & Issue Management
=======================

.. toctree::
   :maxdepth: 1

   RiskIssueManagement

Review logs
===========

.. toctree::
   :maxdepth: 1

   ReviewLogs

Environmental parameters
========================

.. toctree::
   :maxdepth: 1

   Affectation
   User
   Resource
   Customer
   Provider
   Recipient
   Context
   DocumentDirectory 

Tools
=====

.. toctree::
   :maxdepth: 1
 
   Tools

Controls & Automation
=====================

.. toctree::
   :maxdepth: 1
 
   ControlAutomation

Access rights
=============

.. toctree::
   :maxdepth: 1
 
   AccessRights

Lists of values
===============

.. toctree::
   :maxdepth: 1

   ListsOfValues


.. _index-element-types-label:

Lists of types
==============

Every element is linked to a type, defining some mandatory data or other GUI behavior.

.. toctree::
   :maxdepth: 1
   
   ListsOfTypes

Plug-ins
========

.. toctree::
   :maxdepth: 1

   Plugin

Organizations
=============

.. toctree::
   :maxdepth: 1

   Organization

Administration
==============

.. toctree::
   :maxdepth: 1

   Administration

Activity Stream
===============

.. toctree::
   :maxdepth: 1

   ActivityStream   

Glossary
========

.. toctree::
   :maxdepth: 1
  
   Glossary
